--- a/css/style.css
+++ b/css/style.css
@@ -46,4 +46,9 @@ body {
     background-color: var(--background-color);
 }
 
+section {
+    padding-bottom: 4rem;
+    padding-top: 4rem;
+    margin: 0 auto; 
+}
 
