--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,13 @@ section {
     margin: 0 auto; 
 }
 
+/* Colour Map styles */
+#colour-map {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
