--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ section {
 /* Colour Map styles */
 #colour-map {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +63,7 @@ section {
 }
 
 .country {
-  fill: #ccc; /* light grey */
+  fill: #b2d1c3; /* grey / green */
   opacity: 0.5;
   transition: fill 0.4s ease, opacity 0.4s ease;
   cursor: default;
