--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,9 @@ section {
   opacity: 0.5;
   transition: fill 0.4s ease, opacity 0.4s ease;
   cursor: default;
+  stroke: black;
+  stroke-width: 1;
+
 }
 
 /* SVG zoom buttons */
@@ -105,6 +108,24 @@ section {
   cursor: pointer;
 }
 
+/* Darker shade on hover for each colour */
+
+.highlight-red:hover {
+  fill: darkred !important;
+}
+
+.highlight-green:hover {
+  fill: #006400 !important; /* dark green */
+}
+
+.highlight-yellow:hover {
+  fill: goldenrod !important;
+}
+
+.highlight-blue:hover {
+  fill: #00008b !important; /* dark blue */
+}
+
 /*Hover module styles */
 #hover-info {
   position: absolute;
@@ -131,6 +152,9 @@ section {
   font-style: italic;
 }
 
+.country.disabled-hover {
+  pointer-events: none;
+}
 
 /* Info module styles */
 #info-module {
