--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* CSS variables */
 :root {
-    --primary-font: 'Open Sans', sans-serif;
-    --secondary-font: 'Epilogue', sans-serif;
+    --primary-font: 'DM Serif', serif;
+    --secondary-font: 'Cal Sans', sans-serif;
     --primary-color: #171E4B; /* dark blue */
     --text-color: #2C2C2C; /* charcoal gray */
     --highlight-color: #3F51B5; /* indigo */
@@ -11,46 +11,62 @@
 /* Global styles */
 h1 {
     font-family: var(--secondary-font);
-    font-size: 2.5rem;
+    font-size: 50rem;
     font-weight: 900;
-    color: var(--primary-color);
+    color: #f0f0f0;
 
 }
 
 h2 {
     font-family: var(--secondary-font);
-    font-size: 2rem;
+    font-size: 4rem;
     font-weight: 600;
-    color: var(--primary-color);
 }
 
 h3 {
     font-family: var(--secondary-font);
-    font-size: 1.5rem;
+    font-size: 2rem;
     font-weight: 500;
-    color: var(--primary-color);
 }
 
 h4 {
     font-family: var(--secondary-font);
     font-size: 1.2rem;
     font-weight: 400;
-    color: var(--primary-color);
     line-height: 2rem;
 }
 
 body {
     font-family: var(--primary-font);
     font-size: 1.2rem;
-    line-height: 1.5;
     color: var(--text-color);
-    background-color: var(--background-color);
+    background-color: var(--primary-color);
+}
+
+p {
+    font-family: var(--primary-font);
+    font-size: 1.25rem;
+    line-height: 1.5;
+    color: rgb(210, 210, 210);
+}
+
+header {
+    background-color: var(--primary-color);
+    color: #f0f0f0;
+    padding: 20px;
+    text-align: left;
 }
 
 section {
-    padding: 2rem 0;
-    margin: 0 auto; 
+    background-color: var(--primary-color);
+    color: #f0f0f0;
+    padding: 20px;
 }
+
+.container-fluid {
+  background-color: #171E4B !important;
+}
+
 
 /* Colour Map styles */
 #colour-map {
@@ -67,8 +83,8 @@ section {
   opacity: 0.5;
   transition: fill 0.4s ease, opacity 0.4s ease;
   cursor: default;
-  stroke: black;
-  stroke-width: 1;
+  stroke: white;
+  stroke-width: 2;
 
 }
 
