--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,6 @@ section {
   background-color: #171E4B !important;
 }
 
-
 /* Colour Map styles */
 
 #colour-map {
@@ -256,18 +255,22 @@ section {
         position: relative;
     }
 
-    /* Add background colors to labels by id */
+    /* Adjust colour button colors */
     #red + label[for="red"] {
-        background-color: #E63946; 
+        background-color: #E63946;
+        border-color: #E63946; 
     }
     #green + label[for="green"] {
         background-color: #06D6A0;
+        border-color: #06D6A0;
     }
     #yellow + label[for="yellow"] {
         background-color: #FFE94C; 
+        border-color: #FFE94C; 
     }
     #blue + label[for="blue"] {
-        background-color: #118AB2; 
+        background-color: #118AB2;
+        border-color: #118AB2; 
     }
 
     /* Make all colour buttons slightly faded by default */
