--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ section {
 #colour-map {
     width: 100%;
     height: auto;
+    max-width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -100,8 +101,9 @@ section {
 
 /* SVG pan zoom styles */
 #demo-tiger {
-  width: 100%;
-  height: auto; /* Let the SVG adjust size responsively */
+    width: 100%;
+    height: auto; 
+    max-width: 100vw; 
 }
 
 /* SVG zoom buttons */
